# robocomp

./: CMakeLists.txt  README.md
components/planeClient/: CMakeLists.txt  DoxyFile  README.md  planeClient.cdsl
components/planeClient/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificworker.cpp  specificworker.h
components/planePublisherROS/: CMakeLists.txt  DoxyFile  README.md  planePublisherROS.cdsl
components/planePublisherROS/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificworker.cpp
components/planeServer/: CMakeLists.txt  DoxyFile  README.md  planeServer.cdsl
components/planeServer/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificworker.cpp  specificworker.h
components/planeServer/src/RoboCompPlaneROS/: PointXY.h  addPoint.h  addPointRequest.h  setHeight.h  setHeightRequest.h  setHeightResponse.h  setName.h  setNameRequest.h  setWidthRequest.h
components/planeSubscriberROS/: CMakeLists.txt  DoxyFile  README.md  planeSubscriberROS.cdsl
files/innermodel/: simpleworld.xml
interfaces/: CameraSimpleROS.ice  Plane.ice
interfaces/IDSLs/: CameraSimpleROS.idsl  Plane.idsl
libs/innermodel/: .innermodelnode.cpp.swp  CMakeLists.txt  innermodel.cpp  innermodelcamera.cpp  innermodeldifferentialrobot.cpp  innermodeldisplay.cpp  innermodeldraw.cpp  innermodelimu.cpp  innermodeljoint.cpp  innermodellaser.cpp  innermodelmesh.cpp  innermodelnode.cpp  innermodelomnirobot.cpp  innermodelplane.cpp  innermodelpointcloud.cpp  innermodelprismaticjoint.cpp  innermodelreader.cpp  innermodelrgbd.cpp  innermodeltouchsensor.cpp  innermodeltransform.cpp  innermodelviewer.cpp
libs/osgviewer/: .osgview.cpp.swp  osgview.cpp
tools/rcmanager/: ui_editorForm.py  ui_formManager.py
tools/robocompdsl/: robocompdsl_core.py
(+65 files in other folders)
